# MLOPS

./: deploy.sh  model_app.py  predict  requirements.txt
.github/workflows/: github-actions-demo.yml
tp1/: Dockerfile  webservice.py
tp2/: Dockerfile  Dockerfile.mlflow  app.py  docker-compose.yml  main.py  pyproject.toml  test_predict.py
tp3/: 2025_Drift_model_and_retraining.ipynb  pyproject.toml
