[project]
name = "tp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.7.0",
    "pip>=25.3",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.5",
    "numpy>=2.2.1",
    "scikit-learn>=1.6.1",
    "requests>=2.32.3",
]
